--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ div{
     height: 200px;
     width: 200px;
     border-radius: 20%;
-    border: 10px solid black;
+    border: 7px solid black;
     margin:10px;
 
 }
@@ -18,15 +18,27 @@ div{
 
 .red{
     background-color:#d95980;
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
 .green{
   background-color: #63aa60;
+  display: flex;
+    justify-content:center;
+    align-items: center;
 }
 .yellow{
     background-color: #f99b45;
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
 .purple{
     background-color: #819ff9;
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
 .flash{
     background-color: white;
@@ -34,18 +46,4 @@ div{
 
 .userflash{
     background-color: green;
-}
-
-.video{
-    width: 640px;
-    height: 360px;
-    margin-left: 40px;
-}
-
-.video a{ 
-    color: rgb(11, 6, 32);
-    opacity: 0.8;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 20px;
 }
